adding a rope physics example

--- a/flutter_rope/web/manifest.json
+++ b/flutter_rope/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_spring",
-    "short_name": "flutter_spring",
+    "name": "flutter_rope",
+    "short_name": "flutter_rope",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
