--- a/flutter_rope/android/app/src/main/AndroidManifest.xml
+++ b/flutter_rope/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="flutter_spring"
+        android:label="flutter_rope"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
