--- a/flutter_rope/macos/Runner/Configs/AppInfo.xcconfig
+++ b/flutter_rope/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = flutter_spring
+PRODUCT_NAME = flutter_rope
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.flutterSpring
+PRODUCT_BUNDLE_IDENTIFIER = com.example.flutterRope
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
