--- a/flutter_rope/windows/runner/Runner.rc
+++ b/flutter_rope/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_spring" "\0"
+            VALUE "FileDescription", "flutter_rope" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_spring" "\0"
+            VALUE "InternalName", "flutter_rope" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_spring.exe" "\0"
-            VALUE "ProductName", "flutter_spring" "\0"
+            VALUE "OriginalFilename", "flutter_rope.exe" "\0"
+            VALUE "ProductName", "flutter_rope" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
